[metadata]
name = comiccrawler
version = 2018.10.24
description = An image crawler, including multiple modules and GUI.
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Win32 (MS Windows)
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Natural Language :: Chinese (Traditional)
	Operating System :: Microsoft :: Windows :: Windows 7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Internet
	
keywords = image, crawler
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/ComicCrawler

[options]
zip_safe = False
packages = find:

install_requires =
	docopt >= 0.6.2, < 0.7
	pythreadworker>=0.9,<0.10
	safeprint >= 0.1.1, < 1
	requests >= 2.9.1, < 3
	desktop3 >= 0.5.2, < 1
	node_vm2 >= 0.3, < 0.4
	belfrywidgets >= 1.0.3, < 2
	
[options.entry_points]
console_scripts = 
	comiccrawler = comiccrawler:console_init

; [options.package_data]
; node_vm2 =
	; vm-server/*.js
	; vm-server/*.json

; [bdist_wheel]
; universal = False

[vpip]
command_fallback = python cute.py
