[metadata]
name = comiccrawler
version = 2020.10.29
description = An image crawler, including multiple modules and GUI.
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Win32 (MS Windows)
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Natural Language :: Chinese (Traditional)
	Operating System :: Microsoft :: Windows :: Windows 7
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.8
	Topic :: Internet
	
keywords = image, crawler
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/ComicCrawler

[options]
zip_safe = False
packages = find:

install_requires =
	belfrywidgets~=1.0
	desktop3~=0.5.3
	docopt~=0.6.2
	node_vm2~=0.3.7
	pythreadworker~=0.9.0
	requests~=2.26
	safeprint~=0.2.0
	uncurl~=0.0.11
	
[options.entry_points]
console_scripts = 
	comiccrawler = comiccrawler.cli:console_init

; [options.package_data]
; node_vm2 =
	; vm-server/*.js
	; vm-server/*.json

; [bdist_wheel]
; universal = False

[vpip]
command_fallback = python cute.py
